<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.monts.platzigram.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.6">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/platzigram"
            android:onClick="linkimagen"/>
    </RelativeLayout>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="0.4"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_horizontal_login">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EdiTextWhite">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EdiTextWhite">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                />
        </android.support.design.widget.TextInputLayout>
        //El raise botton con efecto de agua y se le pone el style
        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_button_login"
            android:theme="@style/RaisedButtonDark"
            android:onClick="goContainerActivity"
             />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <TextView
                android:id="@+id/dontHaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_account"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="@dimen/textsize_donthaveaccount"
                />
            <TextView
                android:id="@+id/createHere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_here"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="@dimen/textsize_donthaveaccount"
                android:layout_toRightOf="@id/dontHaveAccount"
                android:onClick="goCreateAccount"/>
            //torigught es para que se ponga a un lado del otro elemento

        </RelativeLayout>

    </LinearLayout>
</ScrollView>


    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>